--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "drivemotors",
+  "name": "moveSteering",
   "description": "to make motors move at the same time",
-  "repository": "git://github.com/ev3-js/drive-motors.git",
+  "repository": "git://github.com/ev3-js/move-steering.git",
   "version": "0.1.0",
   "license": "MIT",
   "main": "lib/index.js",
   "scripts": {
+    "dev": "babel src/index.js -w -o lib/index.js",
+    "preversion": "babel src/index.js -o lib/index.js",
     "postversion": "git push && git push --tags && npm publish --access=public"
   },
-  "dependencies": {},
+  "dependencies": {
+    "ev3-js-motor": "^0.4.2"
+  },
   "devDependencies": {
-    "tape": "^4.2.2"
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-1": "^6.3.13",
+    "babel-preset-stage-2": "^6.3.13",
+    "babel-cli": "^6.3.15"
   }
 }
