--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moveSteering",
+  "name": "move-steering",
   "description": "to make motors move at the same time",
   "repository": "git://github.com/ev3-js/move-steering.git",
   "version": "0.1.1",
@@ -11,7 +11,7 @@
     "postversion": "git push && git push --tags && npm publish --access=public"
   },
   "dependencies": {
-    "ev3-js-motor": "^0.4.2"
+    "ev3-js-motor": "^0.5.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
